tests/baselines/reference/moduleInTypePosition1.errors.txt
moduleInTypePosition1_0.ts(2,5): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
moduleInTypePosition1_1.ts(3,14): error TS2709: Cannot use namespace 'WinJS' as a type.


==== moduleInTypePosition1_1.ts (1 errors) ====
    ///<reference path='moduleInTypePosition1_0.ts'/>
    import WinJS = require('./moduleInTypePosition1_0');
    var x = (w1: WinJS) => { };
                 ~~~~~
!!! error TS2709: Cannot use namespace 'WinJS' as a type.
    
==== moduleInTypePosition1_0.ts (1 errors) ====
    export class Promise {
        foo: string;
        ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }
    